RESOLVED FIXED315228
WebCore::availableScreenRect(NSScreen *) is not defined or called
https://bugs.webkit.org/show_bug.cgi?id=315228
Summary WebCore::availableScreenRect(NSScreen *) is not defined or called
Abrar Rahman Protyasha
Reported 2026-05-20 13:37:26 PDT
We declare this function but do not call it from anywhere, neither do we provide a definition for it. We should just remove the declaration.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-05-20 13:37:32 PDT
Abrar Rahman Protyasha
Comment 2 2026-05-20 13:41:59 PDT
EWS
Comment 3 2026-05-20 14:04:58 PDT
Committed 313598@main (f05c6af74a0a): <https://commits.webkit.org/313598@main> Reviewed commits have been landed. Closing PR #65320 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.