WebCore::availableScreenRect(NSScreen *) is not defined or called https://bugs.webkit.org/show_bug.cgi?id=315228 rdar://177556047

Reviewed by Wenson Hsieh.

We declare this function but do not call it from anywhere, neither do
we provide a definition for it, so we just remove the declaration here.

* Source/WebCore/platform/PlatformScreen.h:

Canonical link: https://commits.webkit.org/313598@main